WIP
-----------------------------
* Engine Widget
  - Add "show_torque" option, which shows engine torque.

2.11.2 (2024-04-11)
-----------------------------
* General
  - "bar_padding" option will no longer crop text between edge and padding from
    some none "mono" type fonts.
    "bar_padding" option can now be used to further increase
    each element width in widget for some none "mono" type fonts
    that exceeds default widget width.
  - Config dialog now validates values before saving,
    and shows error prompt for incorrect values.
  - Improved color validation, fixed an issue where invalid color could be saved.
  - Add clock time format validation, improved track clock time calculation.
  - Add "minimum_update_interval" option in Compatibility config,
    which sets minimum refresh rate limit for widget and module in milliseconds.
    This option is used for preventing extremely low refresh rate
    that may cause performance issues in case user incorrectly sets
    "update_interval" and "idle_update_interval" values.
    Default value is "10", and should not be modified.

* Deltabest & Deltabest extended Widgets
  - Add "freeze_duration" option, which sets freeze duration (seconds)
    for displaying previous lap time difference against best lap time source
    after crossing finish line. Value range in "0" to "30" seconds.
    Default is "3" seconds. Set to "0" to disable.

* Flag Widget
  - Optimized flag update methods.

* Gear Widget
  - Fixed a typo in "battery_bar_color_regen" default value,
    which would not show regeneration color.

* Lap time history Widget
  - Fixed missing fuel unit conversion for gallon.
  - Optimized lap history update methods.

* Pedal Widget
  - Add "show_throttle_filtered" "show_brake_filtered" "show_clutch_filtered" options,
    which set visibility of filtered pedal input.
    For vehicle that does not provide filtered pedal API data,
    turn off those options to show raw pedal input only.

* Sectors Widget