@@ -312,25 +312,29 @@ WIDGET_DEFAULT = {
         "font_weight": "bold",
         "bar_padding": 0.2,
         "bar_gap": 2,
-        "show_boost_motor_temp": True,
-        "font_color_boost_motor_temp": "#FFFFFF",
-        "bkg_color_boost_motor_temp": "#222222",
-        "show_boost_water_temp": True,
-        "font_color_boost_water_temp": "#FFFFFF",
-        "bkg_color_boost_water_temp": "#222222",
-        "show_boost_motor_rpm": True,
-        "font_color_boost_motor_rpm": "#FFFFFF",
-        "bkg_color_boost_motor_rpm": "#222222",
-        "show_boost_motor_torque": True,
-        "font_color_boost_motor_torque": "#FFFFFF",
-        "bkg_color_boost_motor_torque": "#222222",
+        "show_motor_temperature": True,
+        "font_color_motor_temperature": "#FFFFFF",
+        "bkg_color_motor_temperature": "#222222",
+        "show_water_temperature": True,
+        "font_color_water_temperature": "#FFFFFF",
+        "bkg_color_water_temperature": "#222222",
+        "show_rpm": True,
+        "font_color_rpm": "#FFFFFF",
+        "bkg_color_rpm": "#222222",
+        "show_torque": True,
+        "font_color_torque": "#FFFFFF",
+        "bkg_color_torque": "#222222",
+        "show_power": True,
+        "font_color_power": "#FFFFFF",
+        "bkg_color_power": "#222222",
         "overheat_threshold_motor": 80,
         "overheat_threshold_water": 80,
         "warning_color_overheat": "#FF2200",
-        "column_index_boost_motor_temp": 1,
-        "column_index_boost_water_temp": 2,
-        "column_index_boost_motor_rpm": 3,
-        "column_index_boost_motor_torque": 4,
+        "column_index_motor_temperature": 1,
+        "column_index_water_temperature": 2,
+        "column_index_rpm": 3,
+        "column_index_torque": 4,
+        "column_index_power": 5,
     },
     "engine": {
         "enable": True,
@@ -364,12 +368,16 @@ WIDGET_DEFAULT = {
         "show_torque": True,
         "font_color_torque": "#FFFFFF",
         "bkg_color_torque": "#222222",
+        "show_power": True,
+        "font_color_power": "#FFFFFF",
+        "bkg_color_power": "#222222",
         "column_index_oil": 1,
         "column_index_water": 2,
         "column_index_turbo": 3,
         "column_index_rpm": 4,
         "column_index_rpm_maximum": 5,
         "column_index_torque": 6,
+        "column_index_power": 7,
     },
     "flag": {
         "enable": True,
