@@ -60,75 +60,90 @@ class Draw(Overlay):
         layout.setSpacing(bar_gap)
         layout.setAlignment(Qt.AlignLeft | Qt.AlignTop)
 
-        column_mt = self.wcfg["column_index_boost_motor_temp"]
-        column_wt = self.wcfg["column_index_boost_water_temp"]
-        column_mr = self.wcfg["column_index_boost_motor_rpm"]
-        column_tq = self.wcfg["column_index_boost_motor_torque"]
+        column_motor = self.wcfg["column_index_motor_temperature"]
+        column_water = self.wcfg["column_index_water_temperature"]
+        column_rpm = self.wcfg["column_index_rpm"]
+        column_torque = self.wcfg["column_index_torque"]
+        column_power = self.wcfg["column_index_power"]
 
         # Motor temperature
-        if self.wcfg["show_boost_motor_temp"]:
-            self.bar_motor_temp = QLabel("M TEMP")
-            self.bar_motor_temp.setAlignment(Qt.AlignCenter)
-            self.bar_motor_temp.setStyleSheet(
-                f"color: {self.wcfg['font_color_boost_motor_temp']};"
-                f"background: {self.wcfg['bkg_color_boost_motor_temp']};"
+        if self.wcfg["show_motor_temperature"]:
+            self.bar_motor = QLabel("M TEMP")
+            self.bar_motor.setAlignment(Qt.AlignCenter)
+            self.bar_motor.setStyleSheet(
+                f"color: {self.wcfg['font_color_motor_temperature']};"
+                f"background: {self.wcfg['bkg_color_motor_temperature']};"
             )
 
         # Motor water temperature
-        if self.wcfg["show_boost_water_temp"]:
-            self.bar_water_temp = QLabel("W TEMP")
-            self.bar_water_temp.setAlignment(Qt.AlignCenter)
-            self.bar_water_temp.setStyleSheet(
-                f"color: {self.wcfg['font_color_boost_water_temp']};"
-                f"background: {self.wcfg['bkg_color_boost_water_temp']};"
+        if self.wcfg["show_water_temperature"]:
+            self.bar_water = QLabel("W TEMP")
+            self.bar_water.setAlignment(Qt.AlignCenter)
+            self.bar_water.setStyleSheet(
+                f"color: {self.wcfg['font_color_water_temperature']};"
+                f"background: {self.wcfg['bkg_color_water_temperature']};"
             )
 
         # Motor rpm
-        if self.wcfg["show_boost_motor_rpm"]:
-            self.bar_motor_rpm = QLabel("RPM")
-            self.bar_motor_rpm.setAlignment(Qt.AlignCenter)
-            self.bar_motor_rpm.setStyleSheet(
-                f"color: {self.wcfg['font_color_boost_motor_rpm']};"
-                f"background: {self.wcfg['bkg_color_boost_motor_rpm']};"
+        if self.wcfg["show_rpm"]:
+            self.bar_rpm = QLabel("RPM")
+            self.bar_rpm.setAlignment(Qt.AlignCenter)
+            self.bar_rpm.setStyleSheet(
+                f"color: {self.wcfg['font_color_rpm']};"
+                f"background: {self.wcfg['bkg_color_rpm']};"
             )
 
         # Motor torque
-        if self.wcfg["show_boost_motor_torque"]:
-            self.bar_motor_torque = QLabel("TORQUE")
-            self.bar_motor_torque.setAlignment(Qt.AlignCenter)
-            self.bar_motor_torque.setStyleSheet(
-                f"color: {self.wcfg['font_color_boost_motor_torque']};"
-                f"background: {self.wcfg['bkg_color_boost_motor_torque']};"
+        if self.wcfg["show_torque"]:
+            self.bar_torque = QLabel("TORQUE")
+            self.bar_torque.setAlignment(Qt.AlignCenter)
+            self.bar_torque.setStyleSheet(
+                f"color: {self.wcfg['font_color_torque']};"
+                f"background: {self.wcfg['bkg_color_torque']};"
+            )
+
+        # Motor power
+        if self.wcfg["show_power"]:
+            self.bar_power = QLabel("POWER")
+            self.bar_power.setAlignment(Qt.AlignCenter)
+            self.bar_power.setStyleSheet(
+                f"color: {self.wcfg['font_color_power']};"
+                f"background: {self.wcfg['bkg_color_power']};"
             )
 
         # Set layout
         if self.wcfg["layout"] == 0:
             # Vertical layout
-            if self.wcfg["show_boost_motor_temp"]:
-                layout.addWidget(self.bar_motor_temp, column_mt, 0)
-            if self.wcfg["show_boost_water_temp"]:
-                layout.addWidget(self.bar_water_temp, column_wt, 0)
-            if self.wcfg["show_boost_motor_rpm"]:
-                layout.addWidget(self.bar_motor_rpm, column_mr, 0)
-            if self.wcfg["show_boost_motor_torque"]:
-                layout.addWidget(self.bar_motor_torque, column_tq, 0)
+            if self.wcfg["show_motor_temperature"]:
+                layout.addWidget(self.bar_motor, column_motor, 0)
+            if self.wcfg["show_water_temperature"]:
+                layout.addWidget(self.bar_water, column_water, 0)
+            if self.wcfg["show_rpm"]:
+                layout.addWidget(self.bar_rpm, column_rpm, 0)
+            if self.wcfg["show_torque"]:
+                layout.addWidget(self.bar_torque, column_torque, 0)
+            if self.wcfg["show_power"]:
+                layout.addWidget(self.bar_power, column_power, 0)
         else:
             # Horizontal layout
-            if self.wcfg["show_boost_motor_temp"]:
-                layout.addWidget(self.bar_motor_temp, 0, column_mt)
-            if self.wcfg["show_boost_water_temp"]:
-                layout.addWidget(self.bar_water_temp, 0, column_wt)
-            if self.wcfg["show_boost_motor_rpm"]:
-                layout.addWidget(self.bar_motor_rpm, 0, column_mr)
-            if self.wcfg["show_boost_motor_torque"]:
-                layout.addWidget(self.bar_motor_torque, 0, column_tq)
+            if self.wcfg["show_motor_temperature"]:
+                layout.addWidget(self.bar_motor, 0, column_motor)
+            if self.wcfg["show_water_temperature"]:
+                layout.addWidget(self.bar_water, 0, column_water)
+            if self.wcfg["show_rpm"]:
+                layout.addWidget(self.bar_rpm, 0, column_rpm)
+            if self.wcfg["show_torque"]:
+                layout.addWidget(self.bar_torque, 0, column_torque)
+            if self.wcfg["show_power"]:
+                layout.addWidget(self.bar_power, 0, column_power)
         self.setLayout(layout)
 
         # Last data
-        self.last_motor_torque = None
-        self.last_motor_rpm = None
-        self.last_motor_temp = None
-        self.last_water_temp = None
+        self.last_temp_motor = None
+        self.last_temp_water = None
+        self.last_rpm = None
+        self.last_torque = None
+        self.last_power = None
 
         # Set widget state & start update
         self.set_widget_state()
@@ -139,72 +154,96 @@ class Draw(Overlay):
         if api.state:
 
             # Motor temperature
-            if self.wcfg["show_boost_motor_temp"]:
-                motor_temp = round(api.read.emotor.motor_temperature(), 1)
-                self.update_motor_temp(motor_temp, self.last_motor_temp)
-                self.last_motor_temp = motor_temp
+            if self.wcfg["show_motor_temperature"]:
+                temp_motor = round(api.read.emotor.motor_temperature(), 1)
+                self.update_motor(temp_motor, self.last_temp_motor)
+                self.last_temp_motor = temp_motor
 
             # Water temperature
-            if self.wcfg["show_boost_water_temp"]:
-                water_temp = round(api.read.emotor.water_temperature(), 1)
-                self.update_water_temp(water_temp, self.last_water_temp)
-                self.last_water_temp = water_temp
+            if self.wcfg["show_water_temperature"]:
+                temp_water = round(api.read.emotor.water_temperature(), 1)
+                self.update_water(temp_water, self.last_temp_water)
+                self.last_temp_water = temp_water
 
             # Motor rpm
-            if self.wcfg["show_boost_motor_rpm"]:
-                motor_rpm = int(api.read.emotor.rpm())
-                self.update_motor_rpm(motor_rpm, self.last_motor_rpm)
-                self.last_motor_rpm = motor_rpm
+            if self.wcfg["show_rpm"]:
+                rpm = int(api.read.emotor.rpm())
+                self.update_rpm(rpm, self.last_rpm)
+                self.last_rpm = rpm
 
             # Motor torque
-            if self.wcfg["show_boost_motor_torque"]:
-                motor_torque = round(api.read.emotor.torque(), 2)
-                self.update_motor_torque(motor_torque, self.last_motor_torque)
-                self.last_motor_torque = motor_torque
+            if self.wcfg["show_torque"]:
+                torque = round(api.read.emotor.torque(), 2)
+                self.update_torque(torque, self.last_torque)
+                self.last_torque = torque
+
+            # Motor power
+            if self.wcfg["show_power"]:
+                power = round(calc.engine_power(
+                    api.read.emotor.torque(), api.read.emotor.rpm()), 2)
+                self.update_power(power, self.last_power)
+                self.last_power = power
 
     # GUI update methods
-    def update_motor_temp(self, curr, last):
+    def update_motor(self, curr, last):
         """Motor temperature"""
         if curr != last:
             if curr < self.wcfg["overheat_threshold_motor"]:
-                color = (f"color: {self.wcfg['font_color_boost_motor_temp']};"
-                         f"background: {self.wcfg['bkg_color_boost_motor_temp']};")
+                color = (f"color: {self.wcfg['font_color_motor_temperature']};"
+                         f"background: {self.wcfg['bkg_color_motor_temperature']};")
             else:
-                color = (f"color: {self.wcfg['font_color_boost_motor_temp']};"
+                color = (f"color: {self.wcfg['font_color_motor_temperature']};"
                          f"background: {self.wcfg['warning_color_overheat']};")
 
             if self.cfg.units["temperature_unit"] == "Fahrenheit":
                 curr = calc.celsius2fahrenheit(curr)
 
             format_text = f"{curr:.01f}°"[:7].rjust(7)
-            self.bar_motor_temp.setText(f"M{format_text}")
-            self.bar_motor_temp.setStyleSheet(color)
+            self.bar_motor.setText(f"M{format_text}")
+            self.bar_motor.setStyleSheet(color)
 
-    def update_water_temp(self, curr, last):
+    def update_water(self, curr, last):
         """Water temperature"""
         if curr != last:
             if curr < self.wcfg["overheat_threshold_water"]:
-                color = (f"color: {self.wcfg['font_color_boost_water_temp']};"
-                         f"background: {self.wcfg['bkg_color_boost_water_temp']};")
+                color = (f"color: {self.wcfg['font_color_water_temperature']};"
+                         f"background: {self.wcfg['bkg_color_water_temperature']};")
             else:
-                color = (f"color: {self.wcfg['font_color_boost_water_temp']};"
+                color = (f"color: {self.wcfg['font_color_water_temperature']};"
                          f"background: {self.wcfg['warning_color_overheat']};")
 
             if self.cfg.units["temperature_unit"] == "Fahrenheit":
                 curr = calc.celsius2fahrenheit(curr)
 
             format_text = f"{curr:.01f}°"[:7].rjust(7)
-            self.bar_water_temp.setText(f"W{format_text}")
-            self.bar_water_temp.setStyleSheet(color)
+            self.bar_water.setText(f"W{format_text}")
+            self.bar_water.setStyleSheet(color)
 
-    def update_motor_rpm(self, curr, last):
+    def update_rpm(self, curr, last):
         """Motor rpm"""
         if curr != last:
             format_text = f"{curr}"[:5].rjust(5)
-            self.bar_motor_rpm.setText(f"{format_text}rpm")
+            self.bar_rpm.setText(f"{format_text}rpm")
 
-    def update_motor_torque(self, curr, last):
+    def update_torque(self, curr, last):
         """Motor torque"""
         if curr != last:
             format_text = f"{curr:.02f}"[:6].rjust(6)
-            self.bar_motor_torque.setText(f"{format_text}Nm")
+            self.bar_torque.setText(f"{format_text}Nm")
+
+    def update_power(self, curr, last):
+        """Motor power"""
+        if curr != last:
+            self.bar_power.setText(self.power_units(curr))
+
+    # Additional methods
+    def power_units(self, power):
+        """Power units"""
+        if self.cfg.units["power_unit"] == "Kilowatt":
+            text = f"{power:.02f}"[:6].rjust(6)
+            return f"{text}kW"
+        if self.cfg.units["power_unit"] == "Horsepower":
+            text = f"{calc.kw2hp(power):.02f}"[:6].rjust(6)
+            return f"{text}hp"
+        text = f"{calc.kw2ps(power):.02f}"[:6].rjust(6)
+        return f"{text}ps"
